flux/apps/traefik/ingress-config.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik
  namespace: default
spec:
  rules:
  - http:
      paths:
      
      #Kubernete Dashboard
      - pathType: Prefix
        path: /dashboard(/|$)(.*)
        backend:
          service:
            name: kubernetes-dashboard-web # Service name of the dashboard
            port:
              number: 8000  # Port exposed by the dashboard service
      
      # Foo-service
      - pathType: Prefix
        path: /foo(/|$)(.*)
        backend:
          service:
            name: foo-service
            port:
              number: 8080
      
      # Bar-service
      - pathType: Prefix
        path: /bar(/|$)(.*)
        backend:
          service:
            name: bar-service
            port:
              number: 8080
